bug fix: 'firstSender'